--- a/post-page.html
+++ b/post-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,6 +15,7 @@
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
@@ -21,49 +23,49 @@
         <a href="#" class="navbar-brand waves-effect mr-5">
           <img src="img/logo1.png" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navContent" aria-controls="navContent" aria-expanded="false">
-        <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent"
+          aria-controls="navContent" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navContent" class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Posts</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav nav-flex-icons">
-          <li class="nav-item">
-            <a href="#" class="nav-link waves-effect rounded">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link waves-effect rounded">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link waves-effect rounded">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link waves-effect rounded">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </li>
-        </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Posts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav nav-flex-icons">
+            <li class="nav-item">
+              <a href="#" class="nav-link waves-effect rounded">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link waves-effect rounded">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link waves-effect rounded">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link waves-effect rounded">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
     </nav>
   </header>
   <main class="mt-5 pt-5">
@@ -72,7 +74,9 @@
         <div class="row">
           <div class="col-md-8 mb-4">
             <div class="card mb-4 wow fadeIn">
-              <img src="https://images.pexels.com/photos/1418595/pexels-photo-1418595.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img-fluid">
+              <img
+                src="https://images.pexels.com/photos/1418595/pexels-photo-1418595.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="" class="img-fluid">
             </div>
             <div class="card mb-4 wow fadeIn">
               <div class="card-body">
@@ -89,13 +93,19 @@
                   Lorem ipsum dolor.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas. Saepe, eligendi, aut.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore
+                  accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas.
+                  Saepe, eligendi, aut.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas. Saepe, eligendi, aut.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore
+                  accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas.
+                  Saepe, eligendi, aut.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas. Saepe, eligendi, aut.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aut mollitia nostrum qui inventore
+                  accusantium magni, natus quasi sapiente consequuntur nemo, velit culpa maiores hic ex, voluptas.
+                  Saepe, eligendi, aut.
                 </p>
               </div>
             </div>
@@ -105,21 +115,27 @@
               </div>
               <div class="card-body">
                 <div class="media d-block d-md-flex mt-3">
-                  <img style="width:100px;" src="https://images.pexels.com/photos/374054/pexels-photo-374054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="d-flex mb-3 mx-auto z-depth-1">
+                  <img style="width:100px;"
+                    src="https://images.pexels.com/photos/374054/pexels-photo-374054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    alt="" class="d-flex mb-3 mx-auto z-depth-1">
                   <div class="media-body text-center text-md-left ml-md-3 ml-0">
                     <h5 class="mt-0 font-weight-bold">
                       Lorem ipsum
                     </h5>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quis voluptas quibusdam facilis dolorem quae esse excepturi pariatur id eos perspiciatis dolorum, illum enim omnis quo alias magnam quia quos impedit nam, animi, tenetur labore.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quis voluptas quibusdam facilis
+                    dolorem quae esse excepturi pariatur id eos perspiciatis dolorum, illum enim omnis quo alias magnam
+                    quia quos impedit nam, animi, tenetur labore.
                   </div>
                 </div>
               </div>
             </div>
             <div class="card card-comments mb-3 wow fadeIn">
-              <div class="card-header font-weight-bold"> 3 comments  </div>
+              <div class="card-header font-weight-bold"> 3 comments </div>
               <div class="card-body">
                 <div class="media d-block d-md-flex mt-4">
-                  <img style="width:100px;" src="https://images.pexels.com/photos/1640765/pexels-photo-1640765.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="d-flex mb-3 mx-auto">
+                  <img style="width:100px;"
+                    src="https://images.pexels.com/photos/1640765/pexels-photo-1640765.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    alt="" class="d-flex mb-3 mx-auto">
                   <div class="media-body text-center text-md-left ml-md-3 ml-0">
                     <h5 class="mt-0 font-weight-blod">
                       Lorem ipsum.
@@ -128,35 +144,14 @@
                       </a>
                     </h5>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
-                     quisquam repellendus aliquam iure ab voluptatem, laudantium
-                     tempora consectetur quae? Magnam vero iure quia suscipit velit
-                     nisi, sunt sapiente.
-                           <div class="media d-block d-md-flex mt-4">
-                             <img style="width:100px;" src="https://images.pexels.com/photos/1108748/pexels-photo-1108748.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="d-flex mb-3 mx-auto">
-                             <div class="media-body text-center text-md-left ml-md-3 ml-0">
-                               <h5 class="mt-0 font-weight-blod">
-                                 Lorem ipsum.
-                                 <a href="#" class="pull-right">
-                                   <i class="fa fa-reply"></i>
-                                 </a>
-                               </h5>
-                               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
-                                quisquam repellendus aliquam iure ab voluptatem, laudantium
-                                tempora consectetur quae? Magnam vero iure quia suscipit velit
-                                nisi, sunt sapiente.
-                             </div>
-                     </div>
-                    <div class="font-group mt-4">
-                      <label for="reply">Your comment</label>
-                      <textarea class="form-control" name="" rows=3 ></textarea>
-                      <div class="text-center">
-                        <button class="btn btn-info btn-sm">Post</button>
-                      </div>
-                    </div>
-                    <div class="media d-block d-md-flex mt-3">
-                      <img style="width:100px;" src="https://images.pexels.com/photos/933255/pexels-photo-933255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="d-flex mb-3 mt-auto">
+                    Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
+                    quisquam repellendus aliquam iure ab voluptatem, laudantium
+                    tempora consectetur quae? Magnam vero iure quia suscipit velit
+                    nisi, sunt sapiente.
+                    <div class="media d-block d-md-flex mt-4">
+                      <img style="width:100px;"
+                        src="https://images.pexels.com/photos/1108748/pexels-photo-1108748.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="" class="d-flex mb-3 mx-auto">
                       <div class="media-body text-center text-md-left ml-md-3 ml-0">
                         <h5 class="mt-0 font-weight-blod">
                           Lorem ipsum.
@@ -165,16 +160,43 @@
                           </a>
                         </h5>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                         Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
-                         quisquam repellendus aliquam iure ab voluptatem, laudantium
-                         tempora consectetur quae? Magnam vero iure quia suscipit velit
-                         nisi, sunt sapiente.
+                        Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
+                        quisquam repellendus aliquam iure ab voluptatem, laudantium
+                        tempora consectetur quae? Magnam vero iure quia suscipit velit
+                        nisi, sunt sapiente.
+                      </div>
+                    </div>
+                    <div class="font-group mt-4">
+                      <label for="reply">Your comment</label>
+                      <textarea class="form-control" name="" rows=3></textarea>
+                      <div class="text-center">
+                        <button class="btn btn-info btn-sm">Post</button>
+                      </div>
+                    </div>
+                    <div class="media d-block d-md-flex mt-3">
+                      <img style="width:100px;"
+                        src="https://images.pexels.com/photos/933255/pexels-photo-933255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="" class="d-flex mb-3 mt-auto">
+                      <div class="media-body text-center text-md-left ml-md-3 ml-0">
+                        <h5 class="mt-0 font-weight-blod">
+                          Lorem ipsum.
+                          <a href="#" class="pull-right">
+                            <i class="fa fa-reply"></i>
+                          </a>
+                        </h5>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
+                        quisquam repellendus aliquam iure ab voluptatem, laudantium
+                        tempora consectetur quae? Magnam vero iure quia suscipit velit
+                        nisi, sunt sapiente.
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="media d-block d-md-flex mt-3">
-                  <img style="width:100px;" src="https://images.pexels.com/photos/914922/pexels-photo-914922.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="d-flex mb-3 mt-auto">
+                  <img style="width:100px;"
+                    src="https://images.pexels.com/photos/914922/pexels-photo-914922.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    alt="" class="d-flex mb-3 mt-auto">
                   <div class="media-body text-center text-md-left ml-md-3 ml-0">
                     <h5 class="mt-0 font-weight-blod">
                       Lorem ipsum.
@@ -183,10 +205,10 @@
                       </a>
                     </h5>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
-                     quisquam repellendus aliquam iure ab voluptatem, laudantium
-                     tempora consectetur quae? Magnam vero iure quia suscipit velit
-                     nisi, sunt sapiente.
+                    Rerum, consequatur nam nesciunt, eveniet quo quaerat quam
+                    quisquam repellendus aliquam iure ab voluptatem, laudantium
+                    tempora consectetur quae? Magnam vero iure quia suscipit velit
+                    nisi, sunt sapiente.
                   </div>
                 </div>
               </div>
@@ -199,12 +221,12 @@
                     <label>Your comment</label>
                     <textarea class="form-control" name="" rows="5"></textarea>
                   </div>
-                      <label>Your name</label>
-                      <input class="form-control" type="text">
-                        <br>
-                      <label>Your e-mail</label>
-                      <input class="form-control" type="e-mail">
-                      <div class="text-center mt-4">
+                  <label>Your name</label>
+                  <input class="form-control" type="text">
+                  <br>
+                  <label>Your e-mail</label>
+                  <input class="form-control" type="e-mail">
+                  <div class="text-center mt-4">
                     <button class="btn btn-info btn-md">Post</button>
                   </div>
                 </form>
@@ -218,10 +240,12 @@
                   Art Center Blog
                 </h4>
                 <p>
-                  <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti id nihil facilis, impedit, necessitatibus vitae. </strong>
+                  <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti id nihil facilis, impedit,
+                    necessitatibus vitae. </strong>
                 </p>
                 <p class="mb-4">
-                  <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti id nihil facilis, impedit, necessitatibus vitae. </strong>
+                  <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti id nihil facilis, impedit,
+                    necessitatibus vitae. </strong>
                 </p>
                 <a href="#" class="btn-outline-white btm-md pr-2 pl-2">
                   Read more <i class="fa fa-graduation-cap ml-2"></i>
@@ -317,7 +341,8 @@
   <script type="text/javascript" src="js/mdb.js"></script>
 
   <script>
-      new WOW().init();
+    new WOW().init();
   </script>
 </body>
+
 </html>
